Surface platform status inside dashboard

--- a/docs/work-log-2025-11-12.md
+++ b/docs/work-log-2025-11-12.md
@@ -24,3 +24,13 @@
 ## 08:34 UTC
 - Removed deprecated `version` stanza from `docker-compose.yml` to silence Compose v2 warnings during deploys.
 
+## 08:40 UTC
+- Pushed changes to GitHub (`94d8543`).
+- Pulled on VPS and rebuilt backend/frontend containers via `docker compose` v2.
+- Confirmed backend startup is clean (staticfiles warning resolved) and services healthy.
+
+## 08:55 UTC
+- Extended dashboard (`app-frontend`) to show live platform availability using the new `/api/platforms/status/` endpoint.
+- Added `PlatformStatus` types, default fallbacks, and client-side fetch with graceful degradation.
+- Styled the "Connect additional storefronts" panel and recompiled `app-frontend` build.
+
